fixed background not showing

--- a/Portfolio.css
+++ b/Portfolio.css
@@ -1,5 +1,5 @@
 body {
-  background: url('outerspace.jpg') ; 
+  background: url('Outerspace.jpg') ; 
   margin: 0px;
 }
 
